# tunnelforge

./: .gitignore  AGENTS.md  CATALOG_INDEX.json  CHANGELOG.md  CLAUDE.md  INSTALL.md  PARITY_TEST_REPORT.md  README.md  TESTING.md  THIRD_PARTY_NOTICES.md  TODO.md  TODO.md.backup  VIBETUNNEL_PARITY_VALIDATION.md  package.json  test_concurrent.sh
.claude/: settings.local.json
benchmark-results/: memory-baseline.csv  startup-times-new.csv  startup-times.csv
desktop/: TESTING.md  build-cross-platform.sh  index.html  package.json  playwright.config.ts  test.html  test_ui.cjs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.backup
desktop/src-tauri/.github/workflows/: ci.yml  dependencies.yml
desktop/src-tauri/docs/: CROSS_PLATFORM_DEV.md
desktop/src-tauri/docs/beta-testing/: metrics.md  program.md  templates.md
desktop/src-tauri/docs/installation/: linux.md  macos.md  windows.md
desktop/src-tauri/docs/plans/: 2025-01-27-cross-platform-implementation.md  beta-testing-program.md
desktop/src-tauri/scripts/: cleanup-builds.sh  post-build-cleanup.sh
desktop/src-tauri/src/: access_mode_service.rs  access_mode_service_tests.rs  cloudflare_service.rs  cloudflare_service_tests.rs  integration_tests.rs  lib.rs  lib.rs.backup  linux_platform.rs  macos_platform.rs  main.rs  main.rs.backup  metrics.rs  ngrok_service.rs  ngrok_service_tests.rs  notifications.rs  notifications.rs.backup  platform_integration_tests.rs  tailscale_service.rs  tailscale_service_tests.rs  test_utils.rs  vibetunnel_parity_tests.rs  windows_platform.rs
desktop/src-tauri/src.backup/: lib.rs  macos_platform.rs
desktop/src-tauri/src.backup/config/: mod.rs
desktop/src-tauri/src.backup/power/: mod.rs
desktop/src-tauri/src.backup/server/: health.rs  manager.rs
desktop/src-tauri/src.backup/sessions/: mod.rs
desktop/src-tauri/src.backup/system/: mod.rs  shortcuts.rs  tray.rs
desktop/src-tauri/src/config/: mod.rs
desktop/src-tauri/src/enterprise/audit/: mod.rs
desktop/src-tauri/src/enterprise/auth/: ldap.rs  mod.rs  sso.rs
desktop/src-tauri/src/enterprise/config/: mod.rs
desktop/src-tauri/src/enterprise/deploy/: mod.rs
desktop/src-tauri/src/notifications/: mod.rs
desktop/src-tauri/src/power/: mod.rs
desktop/src-tauri/src/security/: mod.rs
desktop/src-tauri/src/server/: health.rs  manager.rs  mod.rs  process.rs
desktop/src-tauri/src/sessions/: mod.rs  monitor.rs  websocket.rs
desktop/src-tauri/src/system/: autostart.rs  mod.rs  shortcuts.rs
desktop/src-tauri/src/ui/: main_window.rs  mod.rs  session_window.rs  settings_window.rs  settings_window.rs.backup  tray.rs
docs/: 2025-09-24-tunnelforge-prd.md  ARCHITECTURE.md  BETA_FEEDBACK_SYSTEM.md  BETA_RELEASE_CHECKLIST.md  BETA_TESTING_PROGRAM.md  CODE_SIGNING_SETUP.md  CROSS_PLATFORM_FEATURES.md  CROSS_PLATFORM_ROADMAP.md  GITHUB_SECRETS_SETUP.md  NATIVE_TAURI_IMPLEMENTATION.md  ROADMAP.md  cloudflare-custom-domains.md  files.md  project-overview.md  spec.md
ios/: Package.swift
scripts/: cleanup-builds.sh  dev-full.sh  setup-github-secrets.sh  test-all.sh  test-server.js  validate-parity.sh  validate-parity.sh.backup
server/: TESTING_DEPLOYMENT_GUIDE.md  go.mod  go.sum  validate_implementation.sh
web-astro/: astro.config.mjs  package.json  (+2 more)
(+328 files in other folders)
